# dinos-take-over-the-world

./: CMakeLists.txt  settings.json
include/: animation.h  dino.h  serialization.h  sprite.h
resources/: map.txt
source/: animation.cpp  dino.c  main.c  main.cpp  serialization.cpp  sprite.cpp
